Going back to parent directory does not center previous directory in window
Affected version
- Nightly flatpak: Yes
- Other: Files 43.1, Fedora Linux 37 (Workstation Edition) with GNOME 43.2
Steps to reproduce
- Open directory with many files and subdirectories, so file list should have a scrollbar (good candidates are ~/.cache or ~/.config directories).
- Open any directory that is somewhere near the bottom of file list, must be out of initial viewport.
- Click "Back" button in toolbar.
Current behavior
File list goes back to parent directory, but subdirectory from which you came from is not visible in window.
Expected behavior
Previous directory should be centered or at least visible in window.
Additional information
Scrolling to previous directory seems to be partially working, as you don't end up at the top of the list each time, usually offset is about two rows off from the row where previous directory is. Resizing window makes no difference, previous directory is always off screen.