src/nautilus-files-view.c
@@ -1061,6 +1061,12 @@ nautilus_files_view_get_first_visible_file (NautilusFilesView *view)
     return NAUTILUS_FILES_VIEW_CLASS (G_OBJECT_GET_CLASS (view))->get_first_visible_file (view);
 }
 
+char *
+nautilus_files_view_get_last_visible_file (NautilusFilesView *view)
+{
+    return NAUTILUS_FILES_VIEW_CLASS (G_OBJECT_GET_CLASS (view))->get_last_visible_file (view);
+}
+
 void
 nautilus_files_view_scroll_to_file (NautilusFilesView *view,
                                     const char        *uri)
